move file path into the URL path

--- a/client/editor.html
+++ b/client/editor.html
@@ -3,6 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Scripted</title>
+	<base href="/" />
 	<link rel="stylesheet" type="text/css" href="/css/main.css" />
 	<script data-main="scripts/setup.js" src="/scripts/lib/requirejs/require.js"></script>
 </head>
